# new-db

./: .gitignore  AGENTS.md
project/: README.md  main.py  pyproject.toml  requirements.txt  verify_setup.py
project/agents/modules/: common_module_details.md  implementation_guide.md  module1.md  module2.md  module3.md  module4.md  module5.md  module6.md  module7.md  module8.md  module9.md  whole_system_truth.md
project/chart_outputs/: 20251207_151029_chart_visualization.json
project/chroma_db_store/chromadb/: chroma.sqlite3
project/common/: __init__.py  logger.py
project/doc_rag/: __init__.py  pdf_loader.py  pipeline.py  reranker.py  retriever.py
project/doc_rag/test_data/: meta_data.json
project/output/logs/: test_results_20251208_164858.json
project/project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
project/providers/: config.py  config.toml  database.py  embeddings.py  llm.py  openai_azure.py  qdrant.py
project/retrieval/: __init__.py
project/retrieval/core/: unified_retrieval.py
project/retrieval/doc_rag/: agent.py  doc_retrieval.py
project/retrieval/sql_rag/: chart_agent.py  chart_operators.py  chart_utils.py  old_pipeline.py  old_retriever.py  schema_search.py  sql_retrieval.py
project/sql_rag/: __init__.py  agent.py  chart_agent.py  chart_operators.py  connector.py  logger.py  operators.py  pipeline.py  sql_validation.py  view_charts.html
project/sql_rag/test_data_schema/: output_schema.json
project/tests/: run_simple_test.py  test_retrieval_system.py  test_retry.py  test_system_validation.py
(+7 files in other folders)
