[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cloudpickle>=3.1.2",
    "jsonschema>=4.25.1",
    "numpy>=2.3.5",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
]
